--- a/estilo.css
+++ b/estilo.css
@@ -11,6 +11,7 @@ body{
     background-position: center;
     background-repeat: no-repeat;
     overflow:hidden;
+    color: white;
 }
 @media (min-width: 220px){
     header{
@@ -20,6 +21,7 @@ body{
         text-align: center;
         background-color: rgba(255, 255, 255, 0.2);
         padding: 5px;
+        color: rgb(2, 68, 2)
     }
     h1{
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -39,7 +41,7 @@ body{
         width: 100vw;
         height: auto;
         margin-top: 5px;
-        color:
+        color: rgb(2, 68, 2);
     }
     main{
         display: flex;
@@ -61,6 +63,15 @@ body{
     main li a{
         text-decoration: none;
         color: white;
+    }
+    main li a:hover{
+        color: rgb(2, 68, 2);
+        animation: ease-out 1.5s;
+        animation-duration: 1.5s; animation-timing-function:ease-out; animation-delay: 0s;
+        animation-iteration-count: 1.5s; animation-direction:normal;
+        animation-fill-mode: none;
+        animation-play-state: running;
+        animation-name: greenmood;
     }
     
     
